<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vaccine Register</string>
    <string name="slide_one_top_text">Register</string>
    <string name="slide_two_top_text">Manage</string>
    <string name="slide_three_top_text">Digital</string>
    <string name="slide_one_down_text">Register with just a simple click of a button!</string>
    <string name="slide_two_down_text">Manage all vaccine appointment with ease!</string>
    <string name="slide_three_down_text">Everything is digital, so you can do social distancing!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_login">Login</string>
    <string name="string_email">Email ID</string>
    <string name="string_password">Password</string>
    <string name="string_login_enterpassword_hint">Enter Password</string>
    <string name="string_btn_submit">Submit</string>
    <string name="string_signup">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name_hint">Enter Full Name</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="emailid_hint">Enter Email ID</string>
    <string name="locate_centers">Locate Centers</string>
    <string name="register_for_vaccine">Register for Vaccine</string>
    <string name="check_status">Check Status</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="locate_centers_near_you">Locate centers near you.</string>
    <string name="login_to_continue">Please Login to continue</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_to_get_started">Sign up to get started</string>
    <string name="contentdesc_signup_img">Sign Up Image</string>
    <string name="string_about_us">About us</string>
    <string name="string_contact_us">Contact us</string>
    <string name="string_guidelines">Guidelines</string>
    <string name="string_log_out">Log Out</string>
    <string name="string_map">Map</string>
    <string name="string_name">Name</string>
    <string name="string_dob">Birth Date</string>
    <string name="string_gender">Gender</string>
    <string name="string_female">Female</string>
    <string name="string_male">Male</string>
    <string name="string_mobile">Mobile</string>
    <string name="hint_dob">Enter Date of Birth</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="string_id">ID Card</string>
    <string name="hint_enter_id">Enter Id</string>
    <string name="string_address">Address</string>
    <string name="string_next">Next</string>
    <string name="string_forgot_password">Forgot your password?</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="string_appointment">Pick an Appointment Date</string>
    <string name="string_guidline_header">Here are some guidelines to protect against COVID 19</string>
    <string name="string_wash_hands">Always wash your hands for 30 seconds!</string>
    <string name="string_wear_a_mask">Always wear a mask </string>
    <string name="string_maintain_distance">Always maintain a minimum of 2M distance</string>
    <string name="string_vaccine_status">Vaccine Approval Status</string>
</resources>