<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLogin"
            style="@style/header_text"
            android:layout_marginStart="155dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="155dp"
            android:text="@string/string_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto1"
            android:padding="4dp"
            android:text="@string/string_email"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:layout_constraintVertical_bias="0.289" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto1"
            android:padding="4dp"
            android:text="@string/string_password"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <EditText
            android:id="@+id/etloginEmail"
            android:layout_width="221dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto1"
            android:hint="@string/emailid_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toEndOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

        <EditText
            android:id="@+id/etloginPassword"
            android:layout_width="221dp"
            android:layout_height="48sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto1"
            android:hint="@string/string_login_enterpassword_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toEndOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/etloginEmail" />

        <Button
            android:id="@+id/btnLoginSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto1"
            android:text="@string/string_btn_submit"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:layout_constraintVertical_bias="0.619" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>